Error writing frame if 3D scene starts after first frame of animation and output is H264 #29824

Closed
opened 2012-01-08 04:16:37 +01:00 by David Sheftick · 4 comments

%%%If I place a scene in the VSE and I put the start of the scene at frame 1 or more frames after the start of the animation; then blender stop rendering and I get an error saying "Error writing frame". This only happens with H264 output.

In the attached file the scene is placed at frame 3 and the animation starts at frame 1. Try rendering an animation. Notice that Blender will stop rendering at frame 24 (win7 x64) or frame 47 (Ubuntu x86). This changes depending on the OS and GOP size.

Tested on Blender 2.61 official (Ubuntu) and http://builder.blender.org/download/ rev 43149 (win)
Windows 7 64bit and Ubuntu 11.04 32 bit.
4GB ram
NVIDIA Quadro 1600M
#9500 Core 2 Duo @ 2.6 GHz.

P.S. Thanks for the quick responses and fixes. I guess I will have to start finding tougher bugs.
The average time I seem to wait for a bug fix is only ~24 hours! That has to be a bug!
You guys rock!%%%

%%%If I place a scene in the VSE and I put the start of the scene at frame 1 or more frames after the start of the animation; then blender stop rendering and I get an error saying "Error writing frame". This only happens with H264 output. In the attached file the scene is placed at frame 3 and the animation starts at frame 1. Try rendering an animation. Notice that Blender will stop rendering at frame 24 (win7 x64) or frame 47 (Ubuntu x86). This changes depending on the OS and GOP size. Tested on Blender 2.61 official (Ubuntu) and http://builder.blender.org/download/ rev 43149 (win) Windows 7 64bit and Ubuntu 11.04 32 bit. 4GB ram NVIDIA Quadro 1600M #9500 Core 2 Duo @ 2.6 GHz. P.S. Thanks for the quick responses and fixes. I guess I will have to start finding tougher bugs. The average time I seem to wait for a bug fix is only ~24 hours! That has to be a bug! You guys rock!%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Will look into this issue.%%%

%%%Will look into this issue.%%%

%%%Fixed in svn rev43349. Thanks for the report, closing.%%%

%%%Fixed in svn rev43349. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29824
No description provided.